[project]
name = "travel-planner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "langchain>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-groq>=0.3.4",
    "langgraph>=0.5.0",
    "streamlit>=1.46.1",
]
